--- a/view/layout/web/admin/sysconfig.tpl.html
+++ b/view/layout/web/admin/sysconfig.tpl.html
@@ -1,9 +1,9 @@
 <div>
     <fieldset>
-        <legend>餐馆设置</legend>
+        <legend>店铺设置</legend>
         <form class="form-horizontal" method="post" action="?c=admin&a=updateSysconfig" id="updateSysconfigForm">
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="name"> 餐馆名称 </label>
+                <label class="col-sm-3 control-label no-padding-right" for="name"> 店铺名称 </label>
 
                 <div class="col-sm-4">
                     <div>
@@ -67,7 +67,7 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="phone"> 订餐电话 </label>
+                <label class="col-sm-3 control-label no-padding-right" for="phone"> 服务热线 </label>
 
                 <div class="col-sm-3">
                     <div class="input-group">
@@ -83,7 +83,7 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="comments"> 外卖说明 </label>
+                <label class="col-sm-3 control-label no-padding-right" for="comments"> 说 明 </label>
 
                 <div class="col-sm-5">
                     <textarea rows="10" id="comments" name="comments"
