--- a/view/layout/web/base.tpl.html
+++ b/view/layout/web/base.tpl.html
@@ -16,7 +16,7 @@
                 <td>
                     <marquee direction="left" onmouseout="this.start()" onmouseover="this.stop()" scrollamount="3">
                         <a href="?c=article&a=view2&alias=notice" target="_blank">
-                            <?=$notice['title']?>
+                            <?=$notice['content']?>
                         </a>
                     </marquee>
                 </td>
