--- a/view/layout/web/footer.tpl.html
+++ b/view/layout/web/footer.tpl.html
@@ -5,6 +5,5 @@
     <a href="?c=article&a=view2&alias=message_board">意见反馈 </a>
     <!--<br> Copyright &#169; 2012 www.roeasy.com
     <a href="http://www.roeasy.com/" target="_blank">技术支持：北京融易网络工作室</a>-->
-    <br> 米嗖辣米嗖官方网上订餐外卖
-    <a href="http://www.miibeian.gov.cn/" target="_blank">蜀ICP备13014051号-2</a>　
+    <br> 啤酒坊&nbsp;&nbsp;京ICP备14006485号-1
 </div>
