--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -20,9 +20,9 @@
                     </ul>-->
                 </div>
 
-                <!--<div>
-                    <a><img alt="订餐页面广告2" src="static/img/ad2.jpg"></a>
-                </div>-->
+                <div>
+                    <a><img src="static/img/ad2.jpg"></a>
+                </div>
             </div>
         </div>
     </div>
