--- a/view/layout/web/admin/goodsList.tpl.html
+++ b/view/layout/web/admin/goodsList.tpl.html
@@ -1,6 +1,6 @@
 <div>
     <fieldset>
-        <legend>菜单管理</legend>
+        <legend>商品管理</legend>
         <div class="table-responsive">
             <table id="sample-table-2" class="table table-striped table-bordered table-hover">
                 <thead>
@@ -70,7 +70,7 @@
                 </span>
                 <span class="ui-pg-div">
                     <span class="ui-icon icon-plus-sign purple" onclick="addGoods()"></span>
-                    <span>新增菜品</span>
+                    <span>新增商品</span>
                 </span>
             </div>
             <div class="col-md-10 text-right">
@@ -112,17 +112,17 @@
         })
     }
     function delOneGoods(id) {
-        if (confirm("你确定要删除该菜品么？")) {
+        if (confirm("你确定要删除该商品么？")) {
             _delGoods([id]);
         }
     }
     function delSelectedGoods() {
         var $inputs = $("input[name='ids[]']:checked");
         if ($inputs.length == 0) {
-            alert("请先选择要删除的菜品");
+            alert("请先选择要删除的商品");
             return;
         }
-        if (confirm("你确定要删除所有选中的菜品么?")) {
+        if (confirm("你确定要删除所有选中的商品么?")) {
             var ids = $inputs.map(function () {
                 return this.value;
             }).get();
