--- a/view/layout/web/admin/sidebar.tpl.html
+++ b/view/layout/web/admin/sidebar.tpl.html
@@ -46,7 +46,7 @@
         </li>-->
         <li id="sysconfig" <?php if(g('component')=='sysconfig'): ?>class="active"<?php endif;?>>
             <a href="?c=admin&a=sysconfig">
-                <i class="icon-cog"></i><span class="menu-text"> 餐馆设置 </span>
+                <i class="icon-cog"></i><span class="menu-text"> 店铺设置 </span>
             </a>
         </li>
         <li id="users" <?php if(g('component')=='userList'): ?>class="active"<?php endif;?>>
@@ -56,7 +56,7 @@
         </li>
         <li id="goods" <?php if(g('component')=='goodsList'): ?>class="active"<?php endif;?>>
             <a href="?c=admin&a=goodsList">
-                <i class="icon-food"></i><span class="menu-text"> 菜单管理 </span>
+                <i class="icon-food"></i><span class="menu-text"> 商品管理 </span>
             </a>
         </li>
         <li id="category" <?php if(g('component')=='categoryList'): ?>class="active"<?php endif;?>>
