add qq login auth

--- a/view/layout/web/base.tpl.html
+++ b/view/layout/web/base.tpl.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title><?=$sysconfig['name']?></title>
+    <meta property="qc:admins" content="34476641177012156375" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <?php @include_once( dirname(__FILE__) ) . DS . 'resource_head.tpl.html'; ?>
 </head>
