--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -9,10 +9,17 @@
                     <div class="login">
                         <!--<span class="left"></span>
                         <span>欢迎登陆！</span>-->
-                        <a class="loga">[收藏]</a>
+                        <?php if(check_login()):?>
+                        <a class="loga">
+                            欢迎你，<?=$_SESSION['nickname']?>
+                        </a>
+                        <a class="loga" href="?c=user&a=logout">[退出]</a>
+                        <?php else:?>
                         <a class="loga" href="https://graph.qq.com/oauth2.0/authorize?response_type=code&client_id=<?=c('qq_app_id')?>&redirect_uri=<?=urlencode(c('qq_redirect_uri'))?>&state=">
                             <img src="static/img/auth/Connect_logo_7.png" alt="QQ登录">
                         </a>
+                        <?php endif;?>
+                        <!--<a class="loga">[收藏]</a>-->
                     </div>
                     <!--<ul>
                         <li id="Li1"><a onclick="addToFavorite('http://mslms.net','米嗖辣米嗖官方网上订餐外卖,东四十条外卖、呼家楼外卖、国贸外卖网上订餐，米搜拉米搜送餐,');return false;">我要收藏</a><span></span></li>
