add cart logic code

--- a/view/layout/web/base.tpl.html
+++ b/view/layout/web/base.tpl.html
@@ -15,7 +15,7 @@
             <tr>
                 <td width="20%">&nbsp;</td>
                 <td>
-                    <marquee direction="left" onmouseout="this.start()" onmouseover="this.stop()" scrollamount="3">
+                    <marquee direction="left" scrollamount="3">
                         <a href="?c=article&a=view2&alias=notice" target="_blank">
                             <?=$notice['content']?>
                         </a>
