--- a/view/layout/web/sidebar.tpl.html
+++ b/view/layout/web/sidebar.tpl.html
@@ -20,22 +20,27 @@
                     <th width="16%">数量</th>
                     <th width="16%">小计</th>
                 </tr>
-                <tr>
-                    <td colspan="4">暂无商品</td>
-                </tr>
-                <!--<tr>
-                    <td class="removeBtn" title="点击取消选择！" onclick="td_delete(this)">三杯鸡</td>
-                    <td>14</td>
-                    <td>
-                        <select onchange="selCreate(this)">
-                            <option selected="selected" value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
-                    </td>
-                    <td>14.00</td>
-                </tr>-->
+                <?php if(!$cart_goods):?>
+                    <tr>
+                        <td colspan="4">暂无商品</td>
+                    </tr>
+                <?php else:?>
+                    <?php foreach($cart_goods as $c):?>
+                        <tr>
+                            <td class="removeBtn" title="点击取消选择！" onclick="td_delete(this)">三杯鸡</td>
+                            <td>14</td>
+                            <td>
+                                <select onchange="selCreate(this)">
+                                    <option selected="selected" value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                            </td>
+                            <td>14.00</td>
+                        </tr>
+                    <?php endforeach;?>
+                <?php endif?>
             </table>
         </div>
         <div class="total">
