--- a/view/layout/web/admin/login.tpl.html
+++ b/view/layout/web/admin/login.tpl.html
@@ -42,14 +42,14 @@
                                         <fieldset>
                                             <label class="block clearfix">
                                                 <span class="block input-icon input-icon-right">
-                                                    <input type="text" class="form-control" placeholder="Username" name="username" value="admin"/>
+                                                    <input type="text" class="form-control" placeholder="Username" name="username" value=""/>
                                                     <i class="icon-user"></i>
                                                 </span>
                                             </label>
 
                                             <label class="block clearfix">
                                                 <span class="block input-icon input-icon-right">
-                                                    <input type="password" class="form-control" placeholder="Password" name="password" value="admin"/>
+                                                    <input type="password" class="form-control" placeholder="Password" name="password" value=""/>
                                                     <i class="icon-lock"></i>
                                                 </span>
                                             </label>
