--- a/view/layout/web/home.tpl.html
+++ b/view/layout/web/home.tpl.html
@@ -1,10 +1,11 @@
 <link rel="stylesheet" type="text/css" href="static/css/home.css">
 <script>
-    var cart_id = "<?=$cart_id?>";
+    var cart;
 
-    function add_cart(goods_id) {
-        var goods_num = $("#num" + goods_id).val();
-    }
+    $(function () {
+        cart = new Cart("<?=$cart_id?>", <?=json_encode($cart_goods)?>);
+        cart.init();
+    });
 </script>
 <div class="left">
     <div class="filters">
@@ -50,21 +51,21 @@
 
     <div class="menu">
         <?php foreach($category_goods_list as $c):?>
-        <div class="center_5">
+        <div class="center_5" id="goods<?=$c['id']?>">
             <div class="center_5_1">
                 <span>
                     <img src="static/img/goods/210x170/<?=$c['picture']?>">
                 </span>
             </div>
             <div>
-                <b style="color:black;"><?=$c['name']?></b>
+                <b style="color:black;" id="name<?=$c['id']?>"><?=$c['name']?></b>
             </div>
             <div>
                 <span style="color:red; font-weight:bold;"><?=$c['price']?></span> 元/件
             </div>
             <div style="color:#808080;">
                 我要
-                <select style="height:19px;width:37px;" name="num<?=$c['id']?>">
+                <select style="height:19px;width:37px;" id="num<?=$c['id']?>">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -76,7 +77,7 @@
                     <option value="9">9</option>
                 </select>
                 件
-                <a href="javascript:;" title="<?=$c['name']?>" onclick="add_cart(<?=$c['id']?>);">
+                <a href="javascript:;" title="<?=$c['name']?>" onclick="add_goods(<?=$c['id']?>);">
                     <img src="static/img/buy.gif" style="border:0px;">
                 </a>
             </div>
