--- a/view/layout/web/resource_head.tpl.html
+++ b/view/layout/web/resource_head.tpl.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" type="text/css" href="static/css/common.css">
 <link rel="stylesheet" type="text/css" href="static/css/header.css">
 <link rel="stylesheet" type="text/css" href="static/css/footer.css">
+<script src="static/js/jquery-1.7.2.js"></script>
