--- a/static/css/home.css
+++ b/static/css/home.css
@@ -50,3 +50,4 @@
 #shopCart .total .price {font-weight: bold;margin-left: 10px;font-size: 19px;}
 #shopCart .action {text-align: center;padding: 10px;}
 #shopCart .action .submitBtn {border:2px solid #f1f1f1;display: block;background-color: #696969;height: 35px;width: 100px;line-height: 35px;font-weight: bold;font-size: 20px;color: #FFFAE6;margin: auto;}
+#shopCart .action .submitBtn.active {border:2px solid #f1f1f1;display: block;background-color: #ff0000;}
