--- a/view/layout/web/cart.tpl.html
+++ b/view/layout/web/cart.tpl.html
@@ -44,5 +44,5 @@
     <span class="price">总计: ￥<?=$amount?></span>
 </div>
 <div class="action">
-    <a class="submitBtn <?php if($quantity!=0):?>active<?php endif;?>" onclick="$.facebox({div:'#orderForm'})" href="javascript:;">下&nbsp;单</a>
+    <a class="submitBtn <?php if($quantity!=0):?>active<?php endif;?>" onclick="$.facebox({div:'#orderDiv'})" href="javascript:;">下&nbsp;单</a>
 </div>
