--- a/view/layout/web/sidebar.tpl.html
+++ b/view/layout/web/sidebar.tpl.html
@@ -1,4 +1,3 @@
-
 <div class="right">
     <div class="info">
         <?php if($sysconfig['start_time']||$sysconfig['end_time']):?>
@@ -9,36 +8,45 @@
     </div>
     <div id="shopCart">
     </div>
-    <div id="orderForm" style="display: none;">
-        <table style="width: 620px">
-            <tr>
-                <th style="width: 15%"><label for="name">收货人</label></th>
-                <td><input type="text" name="name" id="name" value=""></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><div id="nameTip"></div></td>
-            </tr>
-            <tr>
-                <th><label for="mobile">手机号</label></th>
-                <td><input type="text" name="mobile" id="mobile" value=""></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><div id="mobileTip"></div></td>
-            </tr>
-            <tr>
-                <th><label for="address">收获地址</label></th>
-                <td><input type="text" name="address" id="address" value=""></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><div id="addressTip"></div></td>
-            </tr>
-            <tr>
-                <th>同步至账户</th>
-                <td><input type="checkbox" name="is_sync" id="is_sync" value=""></td>
-            </tr>
-        </table>
+    <div id="orderDiv" style="display: none;">
+        <form method="POST" action="?c=order&a=saveOrder" id="orderForm">
+            <table style="width: 620px">
+                <tr>
+                    <th style="width: 15%"><label for="name">收货人</label></th>
+                    <td><input type="text" name="name" id="name" value=""></td>
+                </tr>
+                <tr>
+                    <th></th>
+                    <td><div id="nameTip"></div></td>
+                </tr>
+                <tr>
+                    <th><label for="mobile">手机号</label></th>
+                    <td><input type="text" name="mobile" id="mobile" value=""></td>
+                </tr>
+                <tr>
+                    <th></th>
+                    <td><div id="mobileTip"></div></td>
+                </tr>
+                <tr>
+                    <th><label for="address">收货地址</label></th>
+                    <td><input type="text" name="address" id="address" value=""></td>
+                </tr>
+                <tr>
+                    <th></th>
+                    <td><div id="addressTip"></div></td>
+                </tr>
+                <tr>
+                    <th>同步至账户</th>
+                    <td><input type="checkbox" name="is_sync" id="is_sync" value="1"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <input type="hidden" name="cart_id" value="<?=$cart_id?>">
+                        <input type="submit" value="提交订单">
+                        <input type="reset" value="重置">
+                    </td>
+                </tr>
+            </table>
+        </form>
     </div>
 </div>
