--- a/static/css/home.css
+++ b/static/css/home.css
@@ -51,3 +51,8 @@
 #shopCart .action {text-align: center;padding: 10px;}
 #shopCart .action .submitBtn {border:2px solid #f1f1f1;display: block;background-color: #696969;height: 35px;width: 100px;line-height: 35px;font-weight: bold;font-size: 20px;color: #FFFAE6;margin: auto;}
 #shopCart .action .submitBtn.active {border:2px solid #f1f1f1;display: block;background-color: #ff0000;}
+
+#orderDiv {font-size: 13px;}
+#orderDiv table tr {height: 20px;}
+#orderDiv .onShow {color: #d3d3d3;}
+#orderDiv .onError {color: #ff0000;}
