--- a/view/layout/web/resource_bottom.tpl.html
+++ b/view/layout/web/resource_bottom.tpl.html
@@ -1,5 +1,5 @@
 <script src="static/js/facebox/facebox.js"></script>
 <script src="static/js/formValidatorRegex.js"></script>
 <script src="static/js/formValidator.min.js"></script>
+<script src="static/js/common.js"></script>
 <script src="static/js/cart.js"></script>
-<script src="static/js/order.js"></script>
