--- a/static/css/common.css
+++ b/static/css/common.css
@@ -4,6 +4,7 @@ body{font:12px/1 arial,tahoma,"宋体";text-align:center;padding:0px;margin:0px;
 img{ border:0px;}
 select{border:1px #7f9db9 solid;}
 input{border:1px #7f9db9 solid;height: 21px;outline:none;}
+textarea{border:1px #7f9db9 solid;}
 table { padding:1px 0px 1px 0px;  width:100%;height: 50px;}
 a{color:#666666;text-decoration:none;}
 .clearfix {clear: both}
