--- a/view/layout/web/admin/header.tpl.html
+++ b/view/layout/web/admin/header.tpl.html
@@ -19,7 +19,7 @@
                 <li class="light-blue">
                     <a data-toggle="dropdown" href="#" class="dropdown-toggle">
                         <img class="nav-user-photo" src="static/admin/avatars/user.jpg" alt="J"/>
-			            <span class="user-info"><small>欢迎光临,</small><?=$_SESSION['_name']?></span>
+			            <span class="user-info"><small>欢迎光临,</small><?=$_SESSION['_nickname']?></span>
                         <i class="icon-caret-down"></i>
                     </a>
 
