--- a/view/layout/web/admin/editGoods.tpl.html
+++ b/view/layout/web/admin/editGoods.tpl.html
@@ -136,7 +136,7 @@
                 },
                 price: {
                     required: true,
-                    number: true
+                    digits: true
                 }
             },
             messages: {
@@ -146,7 +146,7 @@
                 },
                 price: {
                     required: "请填写商品价格",
-                    number: "价格为数字类型"
+                    digits: "价格必须为整数"
                 }
             },
             highlight: function (e) {
