--- a/view/layout/web/admin/sidebar.tpl.html
+++ b/view/layout/web/admin/sidebar.tpl.html
@@ -49,11 +49,11 @@
                 <i class="icon-cog"></i><span class="menu-text"> 店铺设置 </span>
             </a>
         </li>
-        <li id="users" <?php if(g('component')=='userList'): ?>class="active"<?php endif;?>>
-            <a href="?c=admin&a=userListPage">
+        <!--<li id="users" <?php if(g('component')=='userList'): ?>class="active"<?php endif;?>>
+            <a href="?c=admin&a=userList">
                 <i class="icon-user"></i><span class="menu-text"> 用户管理 </span>
             </a>
-        </li>
+        </li>-->
         <li id="goods" <?php if(g('component')=='goodsList'): ?>class="active"<?php endif;?>>
             <a href="?c=admin&a=goodsList">
                 <i class="icon-food"></i><span class="menu-text"> 商品管理 </span>
@@ -76,9 +76,9 @@
         </li>
     </ul><!-- /.nav-list -->
 
-    <!--<div class="sidebar-collapse" id="sidebar-collapse">
+    <div class="sidebar-collapse" id="sidebar-collapse">
         <i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
-    </div>-->
+    </div>
     <script type="text/javascript">
         try {
             ace.settings.check('sidebar', 'collapsed')
