use js to init cart

--- a/view/layout/web/cart.tpl.html
+++ b/view/layout/web/cart.tpl.html
@@ -44,7 +44,11 @@
     <span class="price">总计: ￥<?=$amount?></span>
 </div>
 <div class="action">
-    <a class="submitBtn <?php if($quantity!=0):?>active<?php endif;?>"
+    <?php if($quantity!=0):?>
+    <a class="submitBtn active"
        onclick="$.facebox({ajax:'?c=order&a=add_order&cart_id=<?=$cart_id?>'})"
        href="javascript:;">下&nbsp;单</a>
+    <?php else:?>
+    <a class="submitBtn" href="javascript:;">下&nbsp;单</a>
+    <?php endif;?>
 </div>
