--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -40,8 +40,8 @@
             <a href="?"><span>我要买</span></a>
             <a href="?c=article&a=view2&&alias=order_guide"><span>购物指南</span></a>
             <a href="?c=article&a=view2&alias=message_board"><span>意见反馈</span></a>
-            <a class="cart" href="javascript:;">
-                <span>我的购物车（<b>3</b>）</span>
+            <a class="cart" href="?">
+                <span>我的购物车</span>
             </a>
         </div>
     </div>
