--- a/view/layout/web/resource_bottom.tpl.html
+++ b/view/layout/web/resource_bottom.tpl.html
@@ -1,3 +1,4 @@
+<script src="static/js/uuid.js"></script>
 <script src="static/js/facebox/facebox.js"></script>
 <script src="static/js/formValidatorRegex.js"></script>
 <script src="static/js/formValidator.min.js"></script>
